syntax = "proto3";

package jv.microservice.v1.dto;

option go_package = "github.com/jinvei/microservice/base/api/proto/v1/dto";


message ReplyCommentItem {
    int64 ID = 1;
    int64 Subject = 2;
    int64 Parent = 3;
    int64 Floor = 4;
    int64 UserID = 5;
    int64 Replyto = 6;
    int64 Like = 7;
    int64 Hate = 8;
    int64 Count = 9;
    int64 State = 10;
}

// message ReplyCommentIndexList {
//     repeated  ReplyCommentIndex Items = 1;
// }

message ReplyCommentContent {
    int64 ID = 1;
//    int64 Index = 2;
    bytes Content = 3;
    string IP = 4;
    int64 Platform = 5;
    string Device = 6;
    int64 State = 7;
}

message ReplyCommentSubject {
    int64 ID = 1;
    int64 ObjType = 2;
    int64 ObjID = 3;
    int64 Like = 4;
    int64 Hate = 5;
    int64 Count = 6;
}

message ReplyComment {
    dto.ReplyCommentItem Item = 1;
    dto.ReplyCommentContent Content = 2;
}
